--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -13,13 +13,15 @@
                 ".vim/",
                 ".git/"
             ],
+		    "trace.server": "verbose",
             "initializationOptions": {
                 "cache": {
                     "directory": "./.ccls-cache"
                 },
 				"clang": {
 					"excludeArgs": ["-specs=nosys.specs"]
-				}
+				},
+				"highlight": { "lsRanges" : true }
             }
         }
     }
